Fix about image layout on mobile (in a way)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,13 +116,8 @@ canvas#gl {
     margin: 0 0 1rem;
 }
 .me {
-    float: right;
-    image-rendering: pixelated;
-    width: 40%;
-    min-width: 300px;
+    max-width: 300px;
     border-radius: 50%;
-    box-shadow: -10px 0 0 -5px red, 5px 8px 0 -5px blue, 5px -8px 0 -5px lime;
-    margin: 3px 0 3px 5px;
 }
 .grid {
     position: fixed;
